--- a/res/layout-land/about.xml
+++ b/res/layout-land/about.xml
@@ -25,7 +25,7 @@
     <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@android:dimen/app_icon_size"
         android:background="@color/action_bar_background" />
 
     <ScrollView
