--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -3,7 +3,7 @@
 
      This program is free software; you can redistribute it and/or
      modify it under the terms of the GNU General Public License
-     as published by the Free Software Foundation; either version 2
+     as published by the Free Software Foundation; either version 3
      of the License, or (at your option) any later version.
 
      This program is distributed in the hope that it will be useful,
@@ -19,4 +19,5 @@
 <resources>
     <color name="blue">#ff6997ff</color>
     <color name="black">#ff111111</color>
+    <color name="action_bar_background">#607D8B</color>
 </resources>
