--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -3,7 +3,7 @@
 
      This program is free software; you can redistribute it and/or
      modify it under the terms of the GNU General Public License
-     as published by the Free Software Foundation; either version 2
+     as published by the Free Software Foundation; either version 3
      of the License, or (at your option) any later version.
 
      This program is distributed in the hope that it will be useful,
@@ -18,15 +18,7 @@
 -->
 <resources>
     <!-- Base application theme. -->
-    <style name="Holo" parent="android:Theme.Holo">
-        <!-- Customize your theme here. -->
-    </style>
-
-    <style name="Holo_Light_DarkActionBar" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-    </style>
-
-    <style name="Theme_Holo_Light" parent="android:Theme.Holo.Light">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
     </style>
 </resources>
