--- a/res/layout/license_menu.xml
+++ b/res/layout/license_menu.xml
@@ -6,12 +6,6 @@
     android:layout_below="@+id/toolbar"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/action_bar_background" />
-
     <WebView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@id/webView"
         android:layout_width="wrap_content"
@@ -21,5 +15,5 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/toolbar" />
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
