--- a/app/src/main/res/layout/activity_ir.xml
+++ b/app/src/main/res/layout/activity_ir.xml
@@ -487,27 +487,25 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/button16"
-                android:layout_toEndOf="@+id/button28"
-                android:layout_toStartOf="@+id/button36"
+                android:layout_toStartOf="@+id/button38"
                 android:contentDescription="@string/btn37"
                 android:onClick="onClick"
                 android:text="@string/tvradio"
-                tools:ignore="RtlCompat" />
+                tools:ignore="RtlCompat"
+                android:layout_toLeftOf="@+id/button38" />
 
             <Button
                 android:id="@+id/button38"
                 android:layout_width="@dimen/button_1"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/button37"
-                android:layout_alignTop="@+id/button33"
-                android:layout_toEndOf="@+id/button37"
-                android:layout_toRightOf="@+id/button37"
-                android:layout_toStartOf="@+id/button29"
                 android:contentDescription="@string/btn38"
                 android:onClick="onClick"
                 android:text="@string/audio"
                 android:textSize="15sp"
-                tools:ignore="RtlCompat" />
+                tools:ignore="RtlCompat"
+                android:layout_alignTop="@+id/button33"
+                android:layout_toLeftOf="@+id/button33"
+                android:layout_toStartOf="@+id/button33" />
 
             <Button
                 android:id="@+id/button30"
